first prototype product

--- a/ProjectDevelopment/manifest.json
+++ b/ProjectDevelopment/manifest.json
@@ -1,11 +1,24 @@
   {
-    "name": "Hello Extensions",
+    "name": "Blueprint",
     "description" : "Base Level Extension",
     "version": "1.0",
     "manifest_version": 2,
-    "browser_action": {
-      "default_popup": "hello.html",
-      "default_icon": "hello_extensions.png"
-    }
-  
+    "background":{
+      "scripts":["background.js"]
+    },
+    "icons":{
+      "64":"icon.png",
+      "32": "icon.png",
+      "16": "icon.png",
+      "128": "icon.png"
+    },
+
+    "browser_action":{
+        "default_popup":"popup.html",
+        "default_icon": "icon.png"
+    },
+
+    "permissions":[
+      "contextMenus"
+    ]
   }
