--- a/ProjectDevelopment/manifest.json
+++ b/ProjectDevelopment/manifest.json
@@ -4,7 +4,8 @@
     "version": "1.0",
     "manifest_version": 2,
     "background":{
-      "scripts":["background.js"]
+      "scripts":["searches.js", "background.js"],
+      "persistent": false
     },
     "icons":{
       "64":"icon.png",
