--- a/Blueprint/manifest.json
+++ b/Blueprint/manifest.json
@@ -9,7 +9,7 @@
       "default_title": "Blueprint",
       "default_popup": "onboarding.html"
     },
-    "content_security_policy": "script-src 'self' https://ajax.googleapis.com; object-src 'self'",    
+    "content_security_policy": "script-src 'self' https://ajax.googleapis.com https://kit.fontawesome.com; object-src 'self'",    
 
     "permissions": ["storage"]
   }
