--- a/Blueprint/manifest.json
+++ b/Blueprint/manifest.json
@@ -5,7 +5,7 @@
     "version": "1",
     "author": "Goh Yong Wei",
     "browser_action": {
-      "default_icon": "./img/Garage.png",
+      "default_icon": "./img/icon_search.png",
       "default_title": "Blueprint",
       "default_popup": "onboarding.html"
     },
